--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial
 .screen { display:none; padding: 12px; max-width: 1000px; margin: 0 auto; }
 .screen.active { display:block; }
 
-.card { background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); padding: 12px; margin: 12px;}
+.card { background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); padding: 12px; margin: 12px; display: flex; flex-direction: column; align-items: center; text-align: center}
+#card-mobile-app { display: flex; flex-direction: column; align-items: center; text-align: center }
 
 .list-rules { align-content: center }
 
@@ -69,6 +70,9 @@ body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial
 .keypad-actions { display:flex; gap:8px; margin-top: 10px; }
 #missBtn { padding: 14px 0; border-radius: 12px; border: 1px solid #ff1313; background: #fd4c4c; font-size: 18px; font-weight: 800; cursor: pointer; color: whitesmoke }
 #appFooter { bottom: 0; left: 0; right: 0; z-index: 10; text-align:center; padding: 12px 16px; color: var(--muted);}
+
+.img-app-icon { border-radius: 12px; width: 48px; height: 48px; object-fit: cover; }
+.div-app-icon {display: flex; flex-direction: column; justify-content: center; align-items: center; }
 
 /* Scoreboard container */
 #scoreTable {
