--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial
 .screen { display:none; padding: 12px; max-width: 1000px; margin: 0 auto; }
 .screen.active { display:block; }
 
-.card { background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); padding: 12px; margin: 12px; display: flex; flex-direction: column; align-items: center; text-align: center}
+.card { background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); padding: 12px; margin: 12px;}
 #card-mobile-app { display: flex; flex-direction: column; align-items: center; text-align: center }
 
 .list-rules { align-content: center }
